<?xml version="1.0"?>
<package format="2">
  <name>my_slam</name>
  <version>0.0.0</version>
  <description>The Enterprise RGB-D SLAM package</description>
  <maintainer email="engineer@todo.todo">SLAM Engineer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
